[tool.poetry]
name = "file_downloader"
version = "0.1.0"
description = ""
authors = ["Alex <alex.mon1989@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.12"
fastapi = "^0.71.0"
uvicorn = "^0.16.0"
pyminizip = "^0.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
